# Image-Comparator-Anaylsis

./: .env  .env_sample  .gitignore  README.md  init_pdm.sh  pyproject.toml  requirements.txt  test_pycrumbs.py
algorithms/: README.md  insertionsort.py
algorithms_and_utils/: README.md  choix_investigation.ipynb  couch.py  crowdkit.py  elo.py  ikbeom_data_combos.py  insertionsort.xlsx  map_reduce_manually_v1.js  map_reduce_manually_v2.js  mergesort.py  simulate_app.py  timsort.py
analysis/: calculate_choix_ranks.py  calculate_elo_ranks.py  flicker_arvo.ipynb  time_btw_choices.py
analysis/GA_OPTIMEyes/: grid.py
analysis/RIMR/: RIMR_Staple_BB.ipynb  RIMR_Staple_BB.py  staple_test.ipynb
preprocess/: image_key_creation.py  preprocess.py  preprocess_RIM-ONE_database_r1.py  preprocess_SegFormer_v3_Special.py
raw_annotations/: pull_flicker_02_15_2023_FlickerList.py  pull_flicker_12_06_2023_arvo_abstract.py  pull_optha_rim-one copy.py  pull_optha_rim-one.py  pull_saif_registrations.py
