[tool.poetry]
name = "image-comparator-anaylsis"
version = "0.1.0"
description = ""
authors = ["Benjamin Bearce <bbearce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
seaborn = "^0.13.1"
choix = "^0.3.5"
simpleitk = "^2.3.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
